// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonList ButtonList should render correctly 1`] = `
<Styled(View)>
  <Styled(View)>
    <FlatList
      data={
        Array [
          Object {
            "external": 0,
            "target": "",
            "text": "girl",
            "title": "girl",
            "url": "/c/",
          },
          Object {
            "external": 0,
            "target": "",
            "text": "toddler girl",
            "title": "toddler girl",
            "url": "/p/",
          },
          Object {
            "external": 0,
            "target": "",
            "text": "boy",
            "title": "boy",
            "url": "/p/",
          },
          Object {
            "external": 0,
            "target": "",
            "text": "toddler boy",
            "title": "toddler boy",
            "url": "/c/",
          },
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={2}
      onEndReachedThreshold={2}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
    <Styled(CustomButton)
      accessibilityLabel="baby"
      accessibilityRole="button"
      buttonVariation="cautionary-button"
      color="red"
      customStyle={Object {}}
      disableButton={false}
      fullWidth=""
      locator=""
      style={
        Object {
          "width": 750,
        }
      }
      text="baby"
      url="/c/"
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`ButtonList ButtonList should render correctly 2`] = `
<Styled(View)>
  <FlatList
    data={
      Array [
        Object {
          "external": 0,
          "target": "",
          "text": "girl",
          "title": "girl",
          "url": "/c/",
        },
        Object {
          "external": 0,
          "target": "",
          "text": "toddlergirl",
          "title": "toddlergirl",
          "url": "/p/",
        },
        Object {
          "external": 0,
          "target": "",
          "text": "boy",
          "title": "boy",
          "url": "/p/",
        },
        Object {
          "external": 0,
          "target": "",
          "text": "toddlerboy",
          "title": "toddlerboy",
          "url": "/c/",
        },
        Object {
          "external": 0,
          "target": "",
          "text": "baby",
          "title": "baby",
          "url": "/c/",
        },
      ]
    }
    disableVirtualization={false}
    horizontal={true}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    showsHorizontalScrollIndicator={false}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</Styled(View)>
`;
